# stlmc

./: pyproject.toml
src/stlmc/solver/: solver_factory.py
